# paper2cmap

./: MANIFEST.in  README.md  app.py  pyproject.toml  requirements.txt
docs/paper2cmap/: cmapgpt.md  index.md  llm.md  logger.md  paper2cmap.md  paper_reader.md
paper2cmap/: __init__.py  cmapgpt.py  llm.py  logger.py  paper2cmap.py  paper_reader.py
paper2cmap/metas/: examples.json  generate_examples.json  merge_and_prune_examples.json  prompts.yaml
tests/: test_cmapgpt.py  test_paper2cmap.py  test_paper_reader.py
